本次添加的内容： - 添加交互友好的路线管理工具 - 优化地图匹配流水线，添加小地图判定流程(opencv实现) - 引入CNN卷积神经网络进行箭头朝向预测（模型还需微调） - 手动管理native Ref，杜绝长时间运行时的内存泄漏 - 支持多套资源（WIKI,内置资源） - 引入mmMap技术，从磁盘加载地图，极大的减少了渲染地图的内存占用 - SIFT提供原本SIFT(内存占用最高),SIFT_PCA(降维版本,128维->64，内存占用其次，精度略降)，SIFT_ULTRA(量化版本,内存占用低，精度再降，默认选择),SIFT_PCA_ULTRA(降维量化版本，内存占用低，精度理论上比SIFT_ULTRA低，但内存与SIFT_ULTRA相差无几) 引入但废弃 - CNN训练的小地图箭头识别（稳定性不如opencv版本） - superPoint，不适用 - xfeat + lightGlue，不适用 - ORB，实现精度差，效率低